Make Secound DataTable

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,6 +4,9 @@
 
 
 
+<link href="~/datatables/css/jquery.datatables.min.css" rel="stylesheet" />
+
+
 
 <div class="container">
 	<h3 class="text-primary"> Customers</h3>
@@ -28,6 +31,7 @@
 
 @section Scripts
 	{
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/datatables/js/jquery.datatables.min.js"></script>
 	<script src="~/datatables/js/datatables.bootstrap4.min.js"></script>
 	<script src="~/js/site.js"></script>
