Change In Layout

--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "DataTables Dark Mode";
 }
 <h1>@ViewData["Title"]</h1>
 
@@ -25,9 +25,6 @@
 
 @section Scripts
 	{
-
-	<script src="~/lib/jquery/dist/jquery.min.js"></script>
-	<script src="~/js/jquery.datatables.min.js"></script>
 
 	<script src="~/js/privacy.js"></script>
 }
