--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,10 +20,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Customer DT1</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Customer DataTables Light Mode</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Customer DT1</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Customer DataTables Dark Mode</a>
                         </li>
                     </ul>
                 </div>
@@ -41,8 +41,9 @@
             &copy; 2023 - JQueryDataTables - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-	
 
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/jquery.datatables.min.js"></script>
 
 
     @await RenderSectionAsync("Scripts", required: false)
