--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/jquery.datatables.min.js"></script>
-
+    <script src="~/datatables/js/jquery.datatables.min.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
